Refs #0. Checkpointing work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,8 @@ if( QWT_VERSION VERSION_LESS 5.0 OR QWT_VERSION VERSION_EQUAL 6.0 OR
   message ( FATAL_ERROR "Qwt version 5 is required, found: ${QWT_VERSION}" )
 endif()
 
+include_directories ( /Users/michaelwedel/devel/external/eigen-eigen-07105f7124f9 )
+
 ###########################################################################
 # Find PyQt & sip
 ###########################################################################
