--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -42,6 +42,7 @@ set ( TEST_PY_FILES
       test/RunDescriptorTest.py
       test/SansIsisGuiSettings.py
       test/SANSBatchModeTest.py
+      test/SANSCalibrationFileHandlerTest.py
       test/SANSCentreFinderTest.py
       test/SANSCommandInterfaceTest.py
       test/SANSDataFileInfoTest.py
